refactor: simplify Google Drive client configuration and improve file metadata retrieval